Fix creation of child Orbitals

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Solor System</title>
+<title>Solar System</title>
 
 <link rel="shortcut icon" type="image/png" href="img/favicon.ico?v=2" />
 <link rel="stylesheet" href="css/tether">
