Add options for each type of orbital to fix orbiting issues, and add stars

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,5 +15,6 @@
 <script src="js/renderer.js"></script>
 <script src="js/entity.js"></script>
 <script src="js/vector.js"></script>
+<script src="js/orbitalOptions.js"></script>
 <script src="js/orbital.js"></script>
 <script src="js/solorSystem.js"></script>
