--- a/views/pages/optionsCard.ejs
+++ b/views/pages/optionsCard.ejs
@@ -21,10 +21,10 @@
         <label>Amount of <%= id %>s</label>
         <div class="row">
           <div class="col-6">
-            <input type="number" class="form-control" placeholder="Min">
+            <input type="number" data-bind="textInput: minCount" class="form-control" placeholder="Min">
           </div>
           <div class="col-6">
-            <input type="number" class="form-control" placeholder="Max">
+            <input type="number" data-bind="textInput: maxCount" class="form-control" placeholder="Max">
           </div>
         </div>
       </div>
@@ -33,10 +33,10 @@
         <label>Size of <%= id %>s</label>
         <div class="row">
           <div class="col-6">
-            <input type="number" class="form-control" placeholder="Min">
+            <input type="number" data-bind="textInput: minSize" class="form-control" placeholder="Min">
           </div>
           <div class="col-6">
-            <input type="number" class="form-control" placeholder="Max">
+            <input type="number" data-bind="textInput: maxSize" class="form-control" placeholder="Max">
           </div>
         </div>
       </div>
@@ -45,10 +45,10 @@
         <label>Distance between <%= id %>s</label>
         <div class="row">
           <div class="col-6">
-            <input type="number" class="form-control" placeholder="Min">
+            <input type="number" data-bind="textInput: minDistance" class="form-control" placeholder="Min">
           </div>
           <div class="col-6">
-            <input type="number" class="form-control" placeholder="Max">
+            <input type="number" data-bind="textInput: maxDistance" class="form-control" placeholder="Max">
           </div>
         </div>
       </div>
