--- a/views/pages/optionsCard.ejs
+++ b/views/pages/optionsCard.ejs
@@ -1,18 +1,18 @@
-<div class="card">
+<div class="card card-inverse" style="background-color: #333; border-color: #fff;"><small>
   <div class="card-header" role="tab" id="<%= id %>OptionsHeader">
-    <h5 class="mb-0">
-      <a data-toggle="collapse" data-parent="#accordion" href="#<%= id %>Options" aria-expanded="false" aria-controls="<%= id %>Options">
+    <h6 class="mb-0">
+      <a data-toggle="collapse" data-parent="#accordion" href="#<%= id %>Options" aria-expanded="false" aria-controls="<%= id %>Options" class="card-title">
         <%- title %>
       </a>
-    </h5>
+    </h6>
   </div>
 
   <div id="<%= id %>Options" class="collapse show" role="tabpanel" aria-labelledby="<%= id %>OptionsHeader">
-    <div class="card-block">
+    <div class="card-block card-text">
       <%if (id === "sun") { %>
       <div class="form-group">
         <label for="<%= id %>Radius">Radius</label>
-        <input type="number" data-bind="textInput: radius" class="form-control" id="<%= id %>Radius" placeholder="Enter the radius for the <%= id %>">
+        <input type="number" data-bind="textInput: radius" class="form-control form-control-sm" id="<%= id %>Radius" placeholder="Enter the radius for the <%= id %>">
       </div>
       <% } %>
 
@@ -21,10 +21,10 @@
         <label>Amount of <%= id %>s</label>
         <div class="row">
           <div class="col-6">
-            <input type="number" data-bind="textInput: minCount" class="form-control" placeholder="Min">
+            <input type="number" data-bind="textInput: minCount" class="form-control form-control-sm" placeholder="Min" min="0">
           </div>
           <div class="col-6">
-            <input type="number" data-bind="textInput: maxCount" class="form-control" placeholder="Max">
+            <input type="number" data-bind="textInput: maxCount" class="form-control form-control-sm" placeholder="Max" min="0">
           </div>
         </div>
       </div>
@@ -33,10 +33,10 @@
         <label>Size of <%= id %>s</label>
         <div class="row">
           <div class="col-6">
-            <input type="number" data-bind="textInput: minSize" class="form-control" placeholder="Min">
+            <input type="number" data-bind="textInput: minSize" class="form-control form-control-sm" placeholder="Min" min="0">
           </div>
           <div class="col-6">
-            <input type="number" data-bind="textInput: maxSize" class="form-control" placeholder="Max">
+            <input type="number" data-bind="textInput: maxSize" class="form-control form-control-sm" placeholder="Max" min="0">
           </div>
         </div>
       </div>
@@ -45,14 +45,14 @@
         <label>Distance between <%= id %>s</label>
         <div class="row">
           <div class="col-6">
-            <input type="number" data-bind="textInput: minDistance" class="form-control" placeholder="Min">
+            <input type="number" data-bind="textInput: minDistance" class="form-control form-control-sm" placeholder="Min" min="0">
           </div>
           <div class="col-6">
-            <input type="number" data-bind="textInput: maxDistance" class="form-control" placeholder="Max">
+            <input type="number" data-bind="textInput: maxDistance" class="form-control form-control-sm" placeholder="Max" min="0">
           </div>
         </div>
       </div>
       <% } %>
     </div>
   </div>
-</div>
+</small></div>
