--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,14 +1,27 @@
 @import "colors";
 
-html,
-body {
+* {
+  box-sizing: border-box;
+}
+
+html {
   width: 100%;
-  height: 100%;
-  margin: 0;
+  min-height: 100vh;
   font-family: "Titillium Web", sans-serif;
   background-color: $black;
   color: $white;
   font-size: 16px;
+}
+
+body {
+  width: inherit;
+  min-height: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+.h1 {
+  margin: 0;
 }
 
 .text-center {
