Closer to responsive

--- a/src/app/orbital/orbital-card.component.html
+++ b/src/app/orbital/orbital-card.component.html
@@ -16,11 +16,11 @@
         <div class="card-row">
           <div class="option-container">
             <label>Min</label>
-            <input type="number" [(ngModel)]="orbitalOptions.minCount" placeholder="Min" min="0">
+            <input class="min-max-control" type="number" [(ngModel)]="orbitalOptions.minCount" placeholder="Min" min="0">
           </div>
           <div class="option-container">
             <label>Max</label>
-            <input type="number" [(ngModel)]="orbitalOptions.maxCount" placeholder="Max" min="0">
+            <input class="min-max-control" type="number" [(ngModel)]="orbitalOptions.maxCount" placeholder="Max" min="0">
           </div>
         </div>
 
@@ -28,11 +28,11 @@
         <div class="card-row">
           <div class="option-container">
             <label>Min</label>
-            <input type="number" [(ngModel)]="orbitalOptions.minSize" placeholder="Min" min="0">
+            <input class="min-max-control" type="number" [(ngModel)]="orbitalOptions.minSize" placeholder="Min" min="0">
           </div>
           <div class="option-container">
             <label>Max</label>
-            <input type="number" [(ngModel)]="orbitalOptions.maxSize" placeholder="Max" min="0">
+            <input class="min-max-control" type="number" [(ngModel)]="orbitalOptions.maxSize" placeholder="Max" min="0">
           </div>
         </div>
       </div>
@@ -43,11 +43,11 @@
         <div class="card-row">
           <div class="option-container">
             <label>Min</label>
-            <input type="number" [(ngModel)]="orbitalOptions.minDistance" placeholder="Min" min="0">
+            <input class="min-max-control" type="number" [(ngModel)]="orbitalOptions.minDistance" placeholder="Min" min="0">
           </div>
           <div class="option-container">
             <label>Max</label>
-            <input type="number" [(ngModel)]="orbitalOptions.maxDistance" placeholder="Max" min="0">
+            <input class="min-max-control" type="number" [(ngModel)]="orbitalOptions.maxDistance" placeholder="Max" min="0">
           </div>
         </div>
       </div>
