--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,34 @@
+main {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+#solarSystem {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 #main {
   align-items: center;
 }
 #left {
+  max-width: 1200px;
+  flex: 1 1 auto!important;
 }
 #right {
-  display: none;
+  max-width: 400px;
   margin: 0.5rem;
+}
+
+footer {
+  text-align: center;
+}
+
+h1 {
+  margin: 0;
 }
 
 .btn-solar {
