--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,22 +5,35 @@ main {
 }
 
 #solarSystem {
-  flex: 1;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  // flex: 1;
+  // display: flex;
+  // flex-wrap: wrap;
+  // justify-content: center;
 }
 
 #main {
-  align-items: center;
+  // align-items: center;
 }
 #left {
   max-width: 1200px;
-  flex: 1 1 auto!important;
+  margin: 0 auto;
+  // flex: 1 1 auto!important;
 }
 #right {
-  max-width: 400px;
-  margin: 0.5rem;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+  orbital-card {
+    width: 300px;
+    display: flex;
+  }
+}
+.button-container {
+  margin: 0 auto;
 }
 
 footer {
@@ -34,6 +47,9 @@ h1 {
 .btn-solar {
   display: block;
   width: 100%;
+  max-width: 300px;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 1rem;
   text-decoration: none;
   border: none;
