--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
   <header>
-    <h1 class="text-center">Solar System</h1>
+    <h1>Solar System</h1>
   </header>
 
   <div id="solarSystem">
