Finally fix the dimensions for the renderer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
   <div id="solarSystem">
     <div id="left">
-      <renderer id="renderer" (render)="doRender($event)" (heightChange)="onHeightChange($event)"></renderer>
+      <renderer id="renderer" (render)="doRender($event)" (renderResize)="onRenderResize($event)"></renderer>
     </div>
 
     <div id="right">
