--- a/src/app/orbital/orbital-card.component.html
+++ b/src/app/orbital/orbital-card.component.html
@@ -7,7 +7,7 @@
     <div class="card-block card-text p-3">
       <div *ngIf="orbitalType === 'sun'">
         <label for="{{orbitalType}}Radius">Radius</label>
-        <input class="inputRadius" type="number" [(ngModel)]="orbitalOptions.radius" id="{{orbitalType}}Radius" placeholder="Enter the radius for the {{orbitalType}}">
+        <input class="input-radius" type="number" [(ngModel)]="orbitalOptions.radius" id="{{orbitalType}}Radius" placeholder="Enter the radius for the {{orbitalType}}">
       </div>
 
       <div *ngIf="orbitalType !== 'sun'">
