Fix footer, and add favicon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,8 @@
   </div>
 
   <footer>
-    Edward McNealy 2019
+    <span><a href="https://github.com/mcnedward/solar-system"><i class="fab fa-github"></i></a></span>
+    <span><a href="https://www.linkedin.com/in/mcnedward"><i class="fab fa-linkedin"></i></a></span>
+    <label><a href="https://edwardmcnealy.com">&copy; Edward McNealy {{copyrightDate}}</a></label>
   </footer>
 </main>
